# rundroid

./: .gitignore  AGENTS.md  Cargo.toml  FUTURE.md  ROADMAP.md  issue.md  todo.md
emulator/backends/api/: Cargo.toml
emulator/backends/api/src/: engine.rs  lib.rs  mem.rs
emulator/bindings/python/: Cargo.toml
emulator/bindings/python/src/: javashim.rs  lib.rs
emulator/case-runner/: Cargo.toml
emulator/case-runner/src/: artifacts.rs  case.rs  jni_hook.rs  lib.rs  runtime.rs
emulator/case-runner/tests/: address_space_authority_test.rs  jni_function_table_test.rs  manifest_validation.rs
emulator/core/: Cargo.toml
emulator/core/src/: arch.rs  backend.rs  emulator.rs  error.rs  lib.rs
emulator/driver/: Cargo.toml
emulator/driver/src/: context.rs  device.rs  mapper.rs  registry.rs
emulator/elf/linker/: Cargo.toml
emulator/elf/linker/src/: error.rs  lib.rs  linker.rs  resolver.rs
emulator/jni/: Cargo.toml
emulator/jni/src/: abi.rs  android_runtime.rs  android_vm.rs  apk_context.rs  args.rs  class.rs  descriptor.rs  dispatch.rs  error.rs  exception.rs  field.rs  function_table.rs  javavm.rs  jnienv.rs  lib.rs  native_registry.rs  object.rs  object_store.rs  refs.rs  registry.rs  types.rs  verify.rs
emulator/jni/tests/: framework_harness.rs
emulator/jni_trampoline/: Cargo.toml
emulator/jni_trampoline/src/: lib.rs
emulator/memory/: Cargo.toml
emulator/memory/src/: address_space.rs  error.rs  lib.rs  region.rs
emulator/os/linux/: Cargo.toml
emulator/os/linux/src/: errno.rs  fd.rs  lib.rs  memory_bridge.rs  syscall.rs
emulator/os/linux/src/kernel/: fd_io.rs  mem.rs  mod.rs  random.rs
emulator/telemetry/: Cargo.toml
emulator/telemetry/src/: event.rs  mode.rs  router.rs  sink.rs
experiment/: Cargo.toml
experiment/examples/signature/: Cargo.toml
experiment/java-bind/: Cargo.toml
experiment/java-bind-macros/: Cargo.toml
experiment/java-bind-macros/src/: lib.rs
experiment/java-bind/src/: lib.rs
lessons/: README.md
lessons/dispatch-cache-key-granularity/: README.md
lessons/python-callback-deadlock-mvp/: README.md  deadlock_demo.py
lessons/reentry-locks-and-pyo3-borrows/: README.md
notebook/: README.md
notebook/android/: JNIEnv.md  jni-handle-and-objectid.md  primitive-types.md
openspec/changes/android-framework-stubs/: design.md  proposal.md  tasks.md
openspec/changes/android-os-rebrand/: design.md  proposal.md  tasks.md
openspec/changes/android-process-bootstrap/: design.md  proposal.md  tasks.md
openspec/changes/android-system-libraries/: design.md  proposal.md  tasks.md
openspec/changes/android-thread-scheduler/: design.md  proposal.md  tasks.md
openspec/changes/android-vm-state-model/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-runtime/: design.md  proposal.md  tasks.md
openspec/changes/class-registration-no-merge/: design.md  proposal.md  tasks.md
openspec/changes/jni-abi-surfaces/: design.md  tasks.md
openspec/changes/jni-method-id-strategy/: design.md  proposal.md  tasks.md
openspec/changes/jni-native-callback/: design.md  proposal.md  tasks.md
openspec/changes/jni-shim-foundation/: design.md  proposal.md  tasks.md
openspec/changes/linux-syscall-layering/: design.md  proposal.md  tasks.md
openspec/changes/memory-address-space-authority/: design.md  proposal.md  tasks.md
openspec/changes/native-jni-lifecycle/: design.md  tasks.md
openspec/changes/object-model-bridging/: design.md  proposal.md  tasks.md
openspec/changes/python-javaclass-call/: design.md  tasks.md
openspec/changes/python-javashim-overrides/: design.md  proposal.md  tasks.md
openspec/changes/python-jni-execution/: design.md  proposal.md  tasks.md
openspec/changes/python-jni-value-marshalling/: design.md  proposal.md  tasks.md
openspec/changes/runtime-correctness-hardening/: design.md  tasks.md
openspec/changes/virtual-device-foundation/: design.md  proposal.md  tasks.md
openspec/specs/android-framework-stubs/: spec.md
openspec/specs/android-vm-model/: spec.md
openspec/specs/dependency-linking/: spec.md
openspec/specs/elf-runtime-interfaces/: spec.md
openspec/specs/file-descriptor-table/: spec.md
openspec/specs/jni-abi-surfaces/: spec.md
openspec/specs/jni-shim/: spec.md
openspec/specs/linux-layering/: spec.md
openspec/specs/native-jni-lifecycle/: spec.md
openspec/specs/python-javashim/: spec.md
openspec/specs/python-jni-value-marshalling/: spec.md
openspec/specs/runtime-core/: spec.md
openspec/specs/runtime-correctness/: spec.md
openspec/specs/telemetry/: spec.md
openspec/specs/testing-harness/: spec.md
openspec/specs/virtual-devices/: spec.md
project_design/accpectance/: runtime-acceptance.md
project_design/docs/: apk-context.md  jni-call-chain.md  jni-env-functions-table.md  pyemulator.md
project_design/feature/: runtime-feature-map.md
project_design/model/: backend.md  elf.md  file-descriptor-entry.md  file-descriptor-table.md  java-class.md  memory-space.md  module-graph.md  module-uri.md  os.md  python-stub.md  resolver.md  scratch-memory.md  telemetry.md  vfs.md  virt-file.md  virtual-device.md
python/: pyproject.toml
python/rundroid/: __init__.py  avm.py  drivers.py  emulator.py  register.py
python/rundroid/javashim/: __init__.py  base.py  decorators.py  registry.py  types.py  values.py  verify.py
python/tests/: test_e2e.py  test_javaclass_call.py  test_javashim.py  test_marshalling.py  test_native_jnimin.py  test_native_scene.py
resources/jnimin/src/: jnimin.c
resources/jnitest/src/: jnitest.c
resources/scene/src/: scene.c
runtime/backends/unicorn/: Cargo.toml
runtime/backends/unicorn/src/: engine.rs
runtime/case-runner/: Cargo.toml
runtime/cli/: Cargo.toml
runtime/cli/src/: main.rs
runtime/core/: Cargo.toml
runtime/core/src/: config.rs  ids.rs  lib.rs  runtime.rs  session.rs
runtime/elf/loader/: Cargo.toml
runtime/elf/loader/src/: api.rs  loader.rs
runtime/elf/parser/: Cargo.toml
runtime/elf/parser/src/: error.rs  lib.rs  model.rs
tmp/: javaclass-call-impl.md  next-todo.md
tools/: resources.py
(+133 files in other folders)
