[package]
name = "rundroid-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "rundroid 虚拟设备抽象层：VirtualDevice trait、DeviceRegistry、VirtFile 挂载源"

[dependencies]
rundroid-telemetry.workspace = true
thiserror.workspace = true
