[package]
name = "rundroid-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "rundroid guest 内存抽象：region tracking / stack / TLS 布局"

[dependencies]
rundroid-core.workspace = true
thiserror.workspace = true
