[package]
name = "rundroid-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "rundroid runtime 核心：config / ids / runtime / session / error model"

[dependencies]
rundroid-telemetry.workspace = true
thiserror.workspace = true
