[package]
name = "rundroid-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "rundroid Linux 用户态运行时：基础 fd / VFS / syscall"

[dependencies]
rundroid-core.workspace = true
rundroid-driver.workspace = true
rundroid-telemetry.workspace = true
thiserror.workspace = true
